# augur

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
augur/: __main__.py  grammar.lark  parser.py
test/: test_suite.py
