[tool.poetry]
name = "augur"
version = "1.3.0"
description = "Lexer, Parser for the B Language"
authors = ["Jahan Addison"]

[tool.flake8]
max-line-length = 90

[tool.poetry.dependencies]
python = ">=3.11"
mypy = "^1.13.0"
flake8 = "^7.1"
lark = "^1.2.2"
setuptools = "^80.9.0"
pytest-cov = "^6"
pytest = "^8"
flake8-pyproject = "^1.2.4"
black = "^25.12.0"

[tool.coverage.run]
omit = [
    "augur/__main__.py",
]

[build-system]
requires = ["poetry>0.12,<1.8.3"]
build-backend = "poetry.masonry.api"
